@@ -1,8 +1,8 @@
 #Grails Metadata file
-#Sat Apr 10 23:48:56 BST 2010
-app.grails.version=1.2.1
+#Sun Apr 11 14:21:00 BST 2010
+app.grails.version=1.2.2
 app.name=picasa
 app.version=0.1.1
 plugins.acegi=0.5.2
-plugins.hibernate=1.2.1
-plugins.tomcat=1.2.1
+plugins.hibernate=1.2.2
+plugins.tomcat=1.2.2
