@@ -68,7 +68,7 @@ class TagController {
 
         // Prepare display values
         int offset = new Integer(((params.offset) ? params.offset : 0)).intValue()
-        int max = new Integer(((params.max) ? params.max : ((grailsApplication.config.picasa.maxkeywords) ? grailsApplication.config.picasa.maxkeywords : 10))).intValue()
+        int max = new Integer(((params.max) ? params.max : ((grailsApplication.config.picasa.maxkeywords) ? grailsApplication.config.picasa.maxkeywordsCon : 10))).intValue()
         def listView = "list"
         if(isAjax) listView = "_list"
         flash.message = ""
