@@ -1,0 +1,7 @@
+package uk.co.anthonycampbell.grails.plugins.picasa
+
+class Comment {
+
+    static constraints = {
+    }
+}
