@@ -1,4 +1,4 @@
-<plugin name='picasa' version='0.1.0' grailsVersion='1.2.1 &gt; *'>
+<plugin name='picasa' version='0.1.1' grailsVersion='1.2.1 &gt; *'>
   <author>Anthony Campbell</author>
   <authorEmail>acampbell3000 [[at] googlemail [dot]] com</authorEmail>
   <title>Grails Picasa Plug-in</title>
@@ -21,7 +21,6 @@ A simple plug-in which provides a photo gallery driven from your Google Picasa W
     <resource>uk.co.anthonycampbell.grails.taglib.TextTagLib</resource>
   </resources>
   <dependencies>
-    <plugin name='acegi' version='0.5.2' />
     <resolvers>
       <resolver type='grailsPlugins' name='grailsPlugins' />
     </resolvers>
