@@ -1,0 +1,17 @@
+package uk.co.anthonycampbell.grails.plugins.picasa
+
+import grails.test.*
+
+class CommentTests extends GrailsUnitTestCase {
+    protected void setUp() {
+        super.setUp()
+    }
+
+    protected void tearDown() {
+        super.tearDown()
+    }
+
+    void testSomething() {
+
+    }
+}
