@@ -2,9 +2,12 @@ VERSION: 0.1.1
 
 Known issues:
 - Sort links need updating to support ajax requests fully.
+- Possible need to enable/disable Tag cache.
 
 Release notes 0.1.1
 - Small fix to remove tag list div when there are no tags to display.
+- Removal of dependency on Spring Security.
+- Introduction of the Comment domain class.
 
 Release notes 0.1.0
 - README update.
